Configuration: math library now a dependency of CFITSIO
On a Fedora 28, we noticed that CFITSIO fails because of not finding basic
math functions (even though `-lm' is in LDADD before CFITSIO). The solution
was to manually add `m' as a dependency during configuration.

Also, the most recent version of CFITSIO installs shared libraries by
default, so there is no need for the `make shared' rule.

The CFITSIO linking problem was found thanks to Hamed Altafi.

--- a/configure.ac
+++ b/configure.ac
@@ -384,7 +384,12 @@ AS_IF([test "x$LIBCURL" = x], [],
       [LDADD="$LTLIBCURL $LDADD"])
 
 
-AC_LIB_HAVE_LINKFLAGS([cfitsio], [], [
+# Older versions of CFITSIO don't install a shared library, only a static
+# one. Eventhough we add `-lm' to LDADD, on some systems, it complains
+# about not finding basic math libraries. Therefore the configure script
+# can't find CFITSIO, eventhough it exists. The solution is to manually add
+# the math-library as a dependency of CFITSIO.
+AC_LIB_HAVE_LINKFLAGS([cfitsio], [m], [
 #include <fitsio.h>
 void junk(void) {
 int status;
