--- a/bin/crop/astcrop.conf
+++ b/bin/crop/astcrop.conf
@@ -31,6 +31,7 @@
 # Crop by center (when a catalog is given)
  coordcol       2
  coordcol       3
+ coordcol       4
 
 # Operating mode:
  mode          wcs
