3D features in Convolve, Match, MakeCatalog, MakeProfiles and library
After some time of working on a development branch on 3D datasets, with
this commit, I am importing the finished 3D work in the programs listed
above and the library into the `master' branch. NoiseChisel and Segment are
still under development, so I haven't brought them in yet.

--- a/bin/mkprof/Makefile.am
+++ b/bin/mkprof/Makefile.am
@@ -44,4 +44,4 @@ EXTRA_DIST = main.h authors-cite.h args.h ui.h mkprof.h oneprofile.h    \
 
 ## The configuration file (distribute and install).
 ## NOTE: the man page is created in doc/Makefile.am
-dist_sysconf_DATA = astmkprof.conf
+dist_sysconf_DATA = astmkprof.conf astmkprof-3d.conf
