Installation: correct wcslib reference and optional libs in pkg-config
Until now, in gnuastro's pkg-config file, we were using `wcs' for WCSLIB
instead of the standard `wcslib' name that the library uses in its
installed pkg-config file (`wcslib.pc'). As suggested by Stefan Brüns, it
should be `wcslib'.

Also, while making the change, I noticed that we weren't mentioning the
optional libraries in Gnuastro's pkg-config at all! So a test was also
added to see which optional libraries exist and adds the ones that
Gnuastro's library was built with to the installed `gnuastro.pc'.

This fixes bug #57200.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -148,13 +148,18 @@ gnuastro/config.h: Makefile $(internaldir)/config.h.in
 # Build Gnuastro's pkg-config file similar to `gnuastro/config.h'.
 gnuastro.pc: Makefile $(srcdir)/gnuastro.pc.in
 	rm -f $@ $@.tmp
-	$(SED)                                      \
-	-e 's|@prefix[@]|$(prefix)|g'               \
-	-e 's|@exec_prefix[@]|$(exec_prefix)|g'     \
-	-e 's|@libdir[@]|$(libdir)|g'               \
-	-e 's|@includedir[@]|$(includedir)|g'       \
-	-e 's|@LIBS[@]|$(LIBS)|g'                   \
-	-e 's|@VERSION[@]|$(VERSION)|g'             \
-	'$(srcdir)/$@.in' >> $@.tmp
+	ol=""; \
+	if [ x"$(HAVE_LIBJPEG)" = xyes ]; then ol="$$ol libjpeg"; fi; \
+	if [ x"$(HAVE_LIBLZMA)" = xyes ]; then ol="$$ol liblzma"; fi; \
+	if [ x"$(HAVE_LIBGIT2)" = xyes ]; then ol="$$ol libgit2"; fi; \
+	if [ x"$(HAVE_LIBTIFF)" = xyes ]; then ol="$$ol libtiff-4"; fi; \
+	$(SED) -e's|@prefix[@]|$(prefix)|g' \
+	       -e"s|@optional_libs[@]|$$ol|g" \
+	       -e's|@exec_prefix[@]|$(exec_prefix)|g' \
+	       -e's|@libdir[@]|$(libdir)|g' \
+	       -e's|@includedir[@]|$(includedir)|g' \
+	       -e's|@LIBS[@]|$(LIBS)|g' \
+	       -e's|@VERSION[@]|$(VERSION)|g' \
+	       '$(srcdir)/$@.in' >> $@.tmp
 	chmod a-w $@.tmp
 	mv $@.tmp $@
