--- a/lib/gnuastro.pc.in
+++ b/lib/gnuastro.pc.in
@@ -27,6 +27,6 @@ Name: Gnuastro
 Description: GNU Astronomy Utilities
 URL: https://www.gnu.org/software/gnuastro/
 Version: @VERSION@
-Requires.private: wcs cfitsio gsl
+Requires.private: wcslib cfitsio gsl @optional_libs@
 Cflags: -I${includedir}
 Libs: -L${libdir} -lgnuastro @LIBS@
